# server/src/routers/api.js
@@ -6,7 +6,7 @@
 
 import { Router } from "express";
 
-import { createNewProduct, collection } from "../ctrls/api/products.js";
+import { createNewProduct, collection, updateProduct } from "../ctrls/api/products.js";
 import { signUp, signIn, profile, logout } from "../ctrls/api/users.js";
 
 import isAuth from "../middleware/Auth.js";
@@ -16,6 +16,7 @@ const router = Router();
 // products
 router.get('/products/collection', isAuth, collection);
 router.post('/products', isAuth, createNewProduct);
+router.patch('/products/:id', isAuth, updateProduct);
 
 // users
 router.post('/users/signup', signUp);
